# gigabot

./: README.md  logging.ini  pyproject.toml
.github/workflows/: build-dev.yml  workflow.yml
docker/gigabot/: Dockerfile
docker/gigabot-task/: Dockerfile
docker/gitabot-alert/: Dockerfile
gigabot/: main.py
gigabot/adapters/: coinmarketcap_adapter.py  dex_screener_adapter.py  errors.py  kubernetes_adapter.py  models.py  utils.py
gigabot/adapters/models/: coin_info.py  crypto_quote.py  dex_screener_models.py
gigabot/bot/: bot_setup.py  config.py
gigabot/bot/commands/: alert_command.py  base_command.py  delete_alert_command.py  delete_cronjob_command.py  list_alerts_command.py  list_cronjobs.py  price_command.py  price_cron_command.py
gigabot/scripts/: alert_handler.py  send_price.py
gigabot/services/: price_service.py
helm-charts/gigabot-server/: Chart.yaml  dev-values.yaml  values.yaml
helm-charts/gigabot-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  role-binding.yaml  role.yaml  serviceaccount.yaml
